# Theia

./: CMakeLists.txt  groups  project.config
cmakeFindModules/: OptimizeTheiaCompilerFlags.cmake  TheiaConfig.cmake.in
data_loader/: CMakeLists.txt  convert_bigsfm_to_binary.cc  convert_bundle_file.cc  convert_sift_key_file.cc  view_bigsfm_dataset.cc  view_bundle_file.cc
docs/doctrees/: acknowledgements.doctree  bibliography.doctree  building.doctree  contributions.doctree  documentation.doctree  environment.pickle  features.doctree  image.doctree  index.doctree  license.doctree  math.doctree  pose.doctree  ransac.doctree  sfm.doctree  tutorials.doctree
docs/doctrees/_templates/sphinx-bootstrap-theme/: HISTORY.doctree  README.doctree  TODO.doctree
docs/doctrees/_templates/sphinx_rtd_theme/: README.doctree
docs/doctrees/documentation/: features.doctree  image.doctree  index.doctree  math.doctree  pose.doctree  ransac.doctree  sfm.doctree
docs/html/: .buildinfo  acknowledgements.html  bibliography.html  building.html  contributions.html  documentation.html  features.html  genindex.html  image.html  index.html  license.html  math.html  objects.inv  pose.html  ransac.html  search.html  searchindex.js  sfm.html  tutorials.html
docs/html/_sources/: bibliography.txt  contributions.txt  documentation.txt  features.txt  index.txt  pose.txt  sfm.txt
docs/html/_sources/documentation/: image.txt  index.txt  math.txt  ransac.txt
docs/html/_templates/sphinx-bootstrap-theme/: HISTORY.html  README.html  TODO.html
docs/html/_templates/sphinx_rtd_theme/: README.html
docs/source/: features.rst  pose.rst  ransac.rst  sfm.rst
include/theia/: theia.h
libraries/: CMakeLists.txt
libraries/cimg/: CImg.h  CMakeLists.txt  cimg.cc
libraries/lemon/: CMakeLists.txt
libraries/optimo/: CMakeLists.txt
libraries/optimo/optimo/solvers/: primal_dual_qp_api.h  primal_dual_qp_impl.h
libraries/statx/: CMakeLists.txt
libraries/statx/cmake/Modules/: FindOPTIMO.cmake
libraries/statx/statx/distributions/evd/: gumbel.cc  gumbel.h  gumbel_mle.cc  gumbel_mle.h  gumbel_tests.cc
libraries/statx/statx/utils/: ecdf.cc
src/theia/: CMakeLists.txt
src/theia/data_loader/: bundler_binary_file.cc  bundler_binary_file.h  bundler_text_file.cc  bundler_text_file.h  read_bigsfm_binary_file.cc
src/theia/image/: image.h  image_canvas.cc  image_canvas.h  image_test.cc
src/theia/image/descriptor/: brief_descriptor.cc  brief_descriptor.h  brief_descriptor_test.cc  brisk_descriptor.cc  brisk_descriptor.h  brisk_descriptor_test.cc  descriptor_extractor.cc  descriptor_extractor.h  freak_descriptor.cc  freak_descriptor.h  freak_descriptor_test.cc  sift_descriptor.cc  sift_descriptor.h  sift_descriptor_test.cc
src/theia/image/keypoint_detector/: agast_detector.cc  agast_detector_test.cc  brisk_detector.cc  brisk_detector.h  brisk_detector_test.cc  brisk_impl.cc  brisk_impl.h  sift_detector.cc  sift_detector_test.cc
src/theia/io/: bundler_binary_file.cc  bundler_binary_file.h  bundler_text_file.cc  bundler_text_file.h  sift_binary_file.cc  sift_binary_file.h  sift_text_file.cc  sift_text_file.h
src/theia/math/: polynomial.cc  polynomial.h  polynomial_test.cc  sturm_chain.cc  sturm_chain.h
src/theia/solvers/: evsac.h  evsac_sampler.h  evsac_test.cc  mlesac.h  mlesac_test.cc  prosac.h  random_sampler.h  random_sampler_test.cc  ransac.h  sample_consensus_estimator.h
src/theia/util/: filesystem.cc  filesystem.h  hash.h  map_util.h
src/theia/vision/matching/: brute_force_feature_matcher.h  brute_force_feature_matcher_test.cc  cascade_hasher.cc  cascade_hasher.h  cascade_hashing_feature_matcher.cc  cascade_hashing_feature_matcher.h  distance.h  feature_matcher.h  feature_matcher_options.h  feature_matcher_utils.cc  feature_matcher_utils.h  feature_matcher_utils_test.cc
src/theia/vision/sfm/: feature.h  model.cc  model.h  model_test.cc  track.cc  track.h  track_test.cc  twoview_info.h  types.h  view.cc  view.h  view_graph.cc  view_graph.h  view_graph_test.cc  view_metadata.h  view_test.cc
src/theia/vision/sfm/camera/: camera.cc  camera.h  camera_test.cc  project_point_to_image.h  projection_matrix_utils.cc  projection_matrix_utils.h  projection_matrix_utils_test.cc  radial_distortion.cc  radial_distortion.h  radial_distortion_test.cc
src/theia/vision/sfm/pose/: dls_pnp_test.cc  eight_point_fundamental_matrix.cc  eight_point_fundamental_matrix.h  eight_point_fundamental_matrix_test.cc  essential_matrix_utils.cc  essential_matrix_utils.h  essential_matrix_utils_test.cc  estimate_global_rotations.cc  estimate_global_rotations.h  estimate_global_rotations_test.cc  five_point_relative_pose.cc  five_point_relative_pose.h  five_point_relative_pose_test.cc  four_point_homography_test.cc  four_point_relative_pose_partial_rotation.cc  four_point_relative_pose_partial_rotation.h  four_point_relative_pose_partial_rotation_test.cc  fundamental_matrix_util.cc  fundamental_matrix_util.h  fundamental_matrix_util_test.cc  global_orientation.cc  global_orientation.h  global_orientation_test.cc  perspective_three_point_test.cc  three_point_relative_pose_partial_rotation.cc  three_point_relative_pose_partial_rotation.h  three_point_relative_pose_partial_rotation_test.cc  util.cc  util.h
src/theia/vision/sfm/transformation/: align_point_clouds.cc  align_point_clouds.h  align_point_clouds_test.cc  (+6 more)
tutorials/: CMakeLists.txt  extract_freak_descriptors.cc  extract_sift_descriptors.cc  match_brief_descriptors.cc  match_freak_descriptors.cc  match_sift_descriptors.cc
(+28 files in other folders)
